docs/kyverno-policies/tests/resource-governance/limit-replica-count/bad-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-deploy
spec:
  replicas: 25
  selector:
    matchLabels:
      app: bad-deploy
  template:
    metadata:
      labels:
        app: bad-deploy
    spec:
      containers:
        - name: app
          image: platformacr.azurecr.io/sample:1.0.0
