docs/kyverno-policies/tests/resource-governance/limit-replica-count/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: limit-replica-count
spec:
  steps:
    - name: install-policy-set-enforce
      try:
        - apply:
            file: ../../../policies/resource-governance/policies.yaml
        - patch:
            resource:
              apiVersion: kyverno.io/v1
              kind: ClusterPolicy
              metadata:
                name: limit-replica-count
              spec:
                validationFailureAction: Enforce
        - assert:
            resource:
              apiVersion: kyverno.io/v1
              kind: ClusterPolicy
              metadata:
                name: limit-replica-count
              status:
                conditions:
                  - reason: Succeeded
                    status: "True"
                    type: Ready
    - name: verify-policy-behavior
      try:
        - apply:
            file: good-deployment.yaml
        - apply:
            file: bad-deployment.yaml
            expect:
              - check:
                  ($error != null): true
